<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="center"
  android:orientation="horizontal">
  <RadioButton
    android:id="@+id/radio4"
    android:text="@string/min15"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
  <RadioButton
    android:id="@+id/radio5"
    android:text="@string/min30"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
  <RadioButton
    android:id="@+id/radio6"
    android:text="@string/min60"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</RadioGroup>