<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:gravity="center"
  android:id="@+id/levelchecker">

  <RadioButton
    android:id="@+id/radio1"
    android:text="@string/level_1"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
  <RadioButton
    android:id="@+id/radio2"
    android:text="@string/level_2"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
  <RadioButton
    android:id="@+id/radio3"
    android:text="@string/level_3"
    android:buttonTint="@color/primaryMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</RadioGroup>
