<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".MainActivity"
  >

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:textSize="42sp"
    android:text="@string/Greeting"
    android:textAlignment="center"
    android:textColor="@color/primaryMain"
    />
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:textSize="24sp"
    android:text="@string/slogan"
    android:textAlignment="center"
    android:textColor="@color/textSecondary"
    />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/start"
    android:background="@color/primaryMain"
    android:onClick="startControl"
    />

</FrameLayout>